// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test page Game Should correct render (with store - status END) 1`] = `
<div
  className="gameDisplay"
>
  <div
    className="gameDisplayCanvasWrapper"
  >
    <canvas
      height={720}
      width={1280}
    />
    <div
      className="gameOverlay"
    >
      <div
        className="gameEnd"
      >
        <p
          className="gameEndText"
        >
          Игра окончена!
        </p>
        <p
          className="gameEndText"
        >
          Количество набранных очков: 
        </p>
        <div
          className="gameEndButtons"
        >
          <a
            className="linkButton gameEndButton"
            href="/"
            onClick={[Function]}
          >
            На главную
          </a>
          <button
            className="button gameEndButton"
            onClick={[Function]}
          >
            Сыграть еще раз
          </button>
          <a
            className="linkButton gameEndButton"
            href="/leaderboard"
            onClick={[Function]}
          >
            Посмотреть таблицу лидеров
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot test page Game Should correct render (with store - status IN_PROGRESS) 1`] = `
<div
  className="gameDisplay"
>
  <div
    className="gameDisplayCanvasWrapper"
  >
    <canvas
      height={720}
      width={1280}
    />
  </div>
</div>
`;

exports[`Snapshot test page Game Should correct render (with store - status START) 1`] = `
<div
  className="gameDisplay"
>
  <div
    className="gameDisplayCanvasWrapper"
  >
    <canvas
      height={720}
      width={1280}
    />
    <div
      className="gameOverlay"
    >
      <div
        className="gameStart"
      >
        <p>
          Куда жать, чтобы было весело?!
        </p>
        <img
          alt="Клавиатура"
          draggable={false}
          height={303}
          width={720}
        />
        <button
          className="button gameStartButton"
          onClick={[Function]}
        >
          ПОНЯЛ, ПОГНАЛИ!
        </button>
      </div>
    </div>
  </div>
</div>
`;
